<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="Kvizovi"/>
    <item
        android:id="@+id/predmeti"
        android:icon="@android:drawable/ic_input_add"
        android:title="Predmeti"/>
    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@android:drawable/ic_input_delete"
        android:title="Zaustavi"/>
    <item
        android:id="@+id/predajKviz"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="Predaj"/>
</menu>

