...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigacijaPitanja"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:itemTextColor="@color/white"
        app:itemBackground="@color/black"
        android:background="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
...
